# ArchitecturePatternsWithPython

./: pyproject.toml
chapter1/: batch.py  test_batch.py
