[tool.poetry]
name = "ArchitecturePatternWithPython"
version = "0.1.0"
description = "ArchitecturePatternWithPython 책"
authors = ["xxlok-3564 <baek9652@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
